2006-06-12  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java (AckProcess): Add methods .addClone(int), and
	.addFork(int).

2006-06-11  Sami Wagiaalla  <swagiaal@redhat.com>

	* TaskState.java: Added syscall tracing mode:
	Added syscall equivilients to all running classes, which can added syscallObservers
	and added trasitions from non syscall states to syscall states. So far
	only tested transtions are implemented. Missing is transtion during running
	state and all transtions back to non syscall mode.
	Added blockedInExecSyscall state to handle transition to /syscallBlockedInExecSyscall/
	state (fix for ending up in the wrong state by missing the sycall entry notification). 
	Added syscallBlockedInExecSyscall to handle execEvent during runningInSyscall ( fix
	for bug reported by Yao.)
	* TaskSyscallObservation.java: new class. Handles addition/removal of
	SyscallObservers.
	* TestI386Modify.java: Removed task.traceSyscall = true. It is no longer needed
	and test still passes :).
	* TestI386Regs.java: Ditto.
	* TaskObservation.java: Changed the task reference from private to protected
	so that specialized children of TaskObservation can see it.
	* Task.java: Removed traceSyscall flag.
	Added handle(Add/Delete)SyscallObserver which take care of special handling
	need for SyscallObservers.
	Added abstract methods sendSyscallContinue,startTracingSyscalls, and 
	stopTracingSyscalls.
	* Proc.java: Added requestAddSyscallObserver, and requestDeleteSyscallObserver
	which add/remove the special SyscallObservation instead of the default
	Observations.
	* LinuxTask.java: Added implementations of start/stop tracingSyscalls
	and sendSyscallContinue.
	Removed traceSyscalls flag, and checks for it this is handled by the 
	active TaskState.
	* DummyTask.java: Added empty implemintations of sendSyscallContinue,
	startTracingSyscalls, and stopTracingSyscalls.
	* TestTaskSyscallObserver.java: Added a test to make sure the State machine